# PickerPicker

./: .gitignore  CHANGELOG.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SUH-DEVOPS-TEMPLATE-SETUP-GUIDE.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  testcase-40-playCount-DB-동기화.md  version.yml  vite.config.ts
.github/workflows/: PROJECT-COMMON-AUTO-CHANGELOG-CONTROL.yaml  PROJECT-DEPLOY-TRIGGER.yaml  PROJECT-PYTHON-CI.yaml  PROJECT-PYTHON-CICD.yaml  PROJECT-REACT-CI.yaml  PROJECT-REACT-CICD.yaml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/apis/: auth_router.py  player_router.py  ranking_router.py  stage_router.py  stats_router.py
backend/src/core/: cleanup.py  config.py  database.py  exceptions.py  logging.py  security.py
backend/src/models/: __init__.py  game_session.py  player.py  player_session.py  player_stats_daily.py
backend/src/services/: auth_service.py  player_service.py  stats_service.py
docs/: rhythm_stages_001_015.json
docs/design/: 01_게임_진행_플로우.md  02_리듬_미리보기_화면.md  02_본_게임_화면.md  03_본게임_화면.md  04_판정_게이지_점수_시스템.md  05_스테이지_데이터_구조.md  06_스테이지_데이터셋.md
public/: rhythm_stages_001_015.json
src/: App.tsx  index.css
src/components/: AudioSettingsModal.tsx  GameScreen.tsx  NicknameModal.tsx  PinModal.tsx  PlayerTypeModal.tsx  RankingScreen.tsx  SettingsModal.tsx  StartScreen.tsx  StatsScreen.tsx
src/contexts/: AudioContext.tsx
src/hooks/: useAudio.ts
src/services/: authService.ts  playerService.ts  statsService.ts
src/types/: index.ts
(+69 files in other folders)
