[project]
name = "pickerpicker-backend"
version = "0.1.0"
description = "PickerPicker 게임 백엔드 API 서버"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
    "python-dotenv>=1.0.0",
]
